templates/IM_template.yaml
---
# Source: IM/charts/mysql/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-mysql
  namespace: default
  labels:
    app: release-name-mysql
    chart: "mysql-1.6.9"
    release: "release-name"
    heritage: "Helm"
  annotations:
spec:
  type: ClusterIP
  ports:
  - name: mysql
    port: 3306
    targetPort: mysql
  selector:
    app: release-name-mysql
---
# Source: IM/templates/im_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: im-backend
spec:
  ports:
  - name: restapi
    port: 8800
  selector:
    name: im-backend
---
# Source: IM/templates/im_web_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: im-web-svc
spec:
  ports:
  - name: http
    port: 80
  selector:
    name: im-web
---
# Source: IM/charts/mysql/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-mysql
  namespace: default
  labels:
    app: release-name-mysql
    chart: "mysql-1.6.9"
    release: "release-name"
    heritage: "Helm"

spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: release-name-mysql
      release: release-name
  template:
    metadata:
      labels:
        app: release-name-mysql
        release: release-name
    spec:
      serviceAccountName: default
      containers:
      - name: release-name-mysql
        image: "mysql:8.0.36"
        imagePullPolicy: "IfNotPresent"
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
        ports:
        - name: mysql
          containerPort: 3306
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - "mysqladmin ping -u root -p${MYSQL_ROOT_PASSWORD}"
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - "mysqladmin ping -u root -p${MYSQL_ROOT_PASSWORD}"
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
        - name: migrations
          mountPath: /docker-entrypoint-initdb.d
        # - name: extras
        #   mountPath: /usr/share/extras
        #   readOnly: true
        
      volumes:
      - name: migrations
        configMap:
          name: release-name-mysql-initialization
      - name: data
        persistentVolumeClaim:
          claimName: release-name-mysql
      # - name: extras
      #   emptyDir: {}
---
# Source: IM/templates/im_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: im-backend
  labels:
    name: im-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      name: im-backend
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        name: im-backend
    spec:
      containers:
      - name: im
        image: grycap/im:latest
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
        ports:
        - containerPort: 8800
        imagePullPolicy: Always
        volumeMounts:
           - name: im
             mountPath: /etc/im/logging.conf
             subPath: logging.conf
           - name: im
             mountPath: /etc/im/im.cfg
             subPath: im.cfg
           - name: imlog
             mountPath: /var/log/im
        livenessProbe:
          httpGet:
            path: /version
            port: 8800
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 2
      volumes:
        - name: im
          configMap:
            name: im
        - name: imlog
          persistentVolumeClaim:
            claimName: imlog
---
# Source: IM/templates/im_web_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: im-web
spec:
  replicas: 1
  selector:
    matchLabels:
      name: im-web
  template:
    metadata:
      labels:
        name: im-web
    spec:
      containers:
        - name: im-web
          image: grycap/im-web:latest
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
          ports:
          - containerPort: 80
            protocol: TCP
            name: http
          volumeMounts:
           - name: im-web
             mountPath: /var/www/html/im-web/analyticstracking.php
             subPath: analyticstracking.php
          livenessProbe:
            httpGet:
              path: /im-web/
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 2
      volumes:
        - name: im-web
          configMap:
            name: im-web
---
# Source: IM/templates/im_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: im
  annotations:
      nginx.ingress.kubernetes.io/client-body-buffer-size: "64k"
      nginx.ingress.kubernetes.io/proxy-body-size: "20m"
      nginx.ingress.kubernetes.io/proxy-connect-timeout: "1800"
      nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
      nginx.ingress.kubernetes.io/proxy-read-timeout: '1800'
      nginx.ingress.kubernetes.io/x-forwarded-prefix: /im
      nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - backend:
            service:
              name: im-backend
              port:
                number: 8800
          pathType: Prefix
          path: /im/?(.*)
---
# Source: IM/templates/im_web_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: im-web
  annotations:
      nginx.ingress.kubernetes.io/client-body-buffer-size: 64k
      nginx.ingress.kubernetes.io/proxy-body-size: 20m
      nginx.ingress.kubernetes.io/proxy-connect-timeout: "1800"
      nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
      nginx.ingress.kubernetes.io/proxy-read-timeout: '1800'
      nginx.ingress.kubernetes.io/x-forwarded-prefix: /im-web
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - backend:
            service:
              name: im-web-svc
              port:
                number: 80
          pathType: Prefix
          path: /im-web/?(.*)
---
# Source: IM/templates/im_log_pvc.yaml
# Persistent Volume
---
# Source: IM/templates/im_web_config.yaml
# In case you want to track web usage using Google Analytics
---
# Source: IM/templates/im_web_deployment.yaml
# Deployment for the IM-web service
---
# Source: IM/templates/im_web_service.yaml
# IM-Web interface
---
# Source: IM/charts/mysql/templates/tests/test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: release-name-mysql-test
  namespace: default
  labels:
    app: release-name-mysql
    chart: "mysql-1.6.9"
    heritage: "Helm"
    release: "release-name"
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: release-name-test
      image: "bats/bats:1.2.1"
      imagePullPolicy: "IfNotPresent"
      command: ["/opt/bats/bin/bats", "-t", "/tests/run.sh"]
      volumeMounts:
      - mountPath: /tests
        name: tests
        readOnly: true
  volumes:
  - name: tests
    configMap:
      name: release-name-mysql-test
  restartPolicy: Never
